--- a/Makefile.debian
+++ b/Makefile.debian
@@ -453,8 +453,8 @@ gnupgkey:
 	echo 'Name-Email: $(DEBEMAIL)' >> $(BOTKEY)
 	echo 'Expire-Date: 0' >> $(BOTKEY)
 	echo "Passphrase: ''" >> $(BOTKEY)
-	echo '%pubring $(BOTKEY).pub' >> $(BOTKEY)
-	echo '%secring $(BOTKEY).sec' >> $(BOTKEY)
+	echo '#%pubring $(BOTKEY).pub' >> $(BOTKEY)
+	echo '#%secring $(BOTKEY).sec' >> $(BOTKEY)
 	echo '# Do a commit here, so that we can later print "done" :-)' >> $(BOTKEY)
 	echo '%commit' >> $(BOTKEY)
 	echo '%echo done' >> $(BOTKEY)
