--- a/Makefile.debian
+++ b/Makefile.debian
@@ -424,8 +424,7 @@ $(PBUILDERTGZ):
 	mkdir -p $(PBUILDERTGZ)
 
 $(LOCALREPO):
-	sudo mkdir $@
-	sudo chown `id -u`.`id -g` $@
+	if [ -w `dirname $@` ] ; then mkdir $@ ; else sudo mkdir $@ ; sudo chown `id -u`.`id -g` $@; fi
 
 clean: # Clean $(BUILDPLACE) $(BUILDFILES) $(TARBALLS) (intermediate files) #
 	rm -rf $(BUILDPLACE) $(BUILDFILES) $(TARBALLS) 
@@ -452,7 +451,7 @@ gnupgkey:
 	echo 'Name-Comment: with stupid passphrase' >> $(BOTKEY)
 	echo 'Name-Email: $(DEBEMAIL)' >> $(BOTKEY)
 	echo 'Expire-Date: 0' >> $(BOTKEY)
-	echo "Passphrase: ''" >> $(BOTKEY)
+	echo '#Passphrase: abc' >> $(BOTKEY)
 	echo '#%pubring $(BOTKEY).pub' >> $(BOTKEY)
 	echo '#%secring $(BOTKEY).sec' >> $(BOTKEY)
 	echo '# Do a commit here, so that we can later print "done" :-)' >> $(BOTKEY)
