Add wslink target
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10977 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -458,3 +458,6 @@ gnupgkey:
 	echo '%commit' >> $(BOTKEY)
 	echo '%echo done' >> $(BOTKEY)
 	[ -d ~/.gnupg ] || gpg --batch --gen-key $(BOTKEY)
+
+wslink:
+	rm -f /var/www/ws; ln -s `pwd` /var/www/ws
