Use $(CURDIR) instead of `pwd`
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10978 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -460,4 +460,4 @@ gnupgkey:
 	[ -d ~/.gnupg ] || gpg --batch --gen-key $(BOTKEY)
 
 wslink:
-	rm -f /var/www/ws; ln -s `pwd` /var/www/ws
+	rm -f /var/www/ws; ln -s $(CURDIR) /var/www/ws
