User DEBEMAIL as a SIGNKEY for the repository
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10981 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -63,7 +63,7 @@ LOCALREPOUBU=/var/www/ubuntu-fusionforge-$(BRANCH)
 #
 XDISTRIB:=3sid
 DISTRIB=$(shell echo $(XDISTRIB) | cut -c2-)
-SIGNKEY=yes
+SIGNKEY=$(DEBEMAIL)
 BOTKEY=botkey
 DEBIANLIST=1lenny 2squeeze 3sid
 DEBIANLISTP=1etch
