Allow dev to keep their local config in a config dir
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@11006 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -50,7 +50,7 @@ endif
 TARBALLS=$(CURDIR)/tarballs
 #
 # Local customization
--include $(CURDIR)/local.$(shell hostname)
+-include $(CURDIR)/config/local.$(shell hostname)
 #
 BUILDPLACE=$(BUILDERDIR)/buildplace
 BUILDFILES=$(BUILDERDIR)/buildfiles
