--- a/tests/openvz/Makefile
+++ b/tests/openvz/Makefile
@@ -6,7 +6,7 @@ RINSEPOSTINST=--after-post-install $(CURDIR)/local.rinse.api
 VEIDDEBTEMP=100
 VEIDCENTEMP=101
 ARCH=$(shell dpkg-architecture -qDEB_BUILD_ARCH)
-EXTRADEBPACKAGE=--include=ssh,less,htop,zsh
+EXTRADEBPACKAGE=--include=ssh,less,htop,zsh,vim,debconf-utils
 EXTRACENTOSPACKAGE=openssh-server,man,zsh,bind-utils,openssh-clients,php,wget
 VZCTL=/usr/sbin/vzctl
 DEBOOTSTRAP=/usr/sbin/debootstrap
