Moved backup format for tests to pure .sql Improved tests on forums.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,6 @@
 
-PHPUNIT=/opt/php/bin/phpunit
+PHPUNIT=phpunit
 
 init: func/Init/empty.php ../src/db/gforge.sql
 	$(PHPUNIT) func/Init/empty.php
-	scripts/pg_backup.php func/gforge-init.csql
+	scripts/pg_backup.php func/gforge-init.sql
