Source install: No chgrp(scm_*) when no shell as groups are not created
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@11162 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/etc/local.inc.example
+++ b/gforge/etc/local.inc.example
@@ -157,7 +157,7 @@ $sys_use_trove=true;
 $sys_use_snippet=false;
 $sys_use_ssl=false;
 $sys_use_people=false;
-$sys_use_shell=true;
+$sys_use_shell=false;
 $sys_use_private_project=true;
 $sys_use_diary=true;
 $sys_use_bookmarks=true;
