--- a/gforge/etc/local.inc.example
+++ b/gforge/etc/local.inc.example
@@ -53,7 +53,7 @@ $sys_lists_host = 'gforge.company.com';
 //
 
 // Machine that hosts SCM
-$sys_scm_host = 'cvs.gforge.company.com';
+$sys_scm_host = 'gforge.company.com';
 $sys_cvs_host=$sys_scm_host;
 
 // Force the use of a single scm host instead of scm.project.domain.com
