Also rename cron.d for plugins
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@11207 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/debian/rules
+++ b/src/debian/rules
@@ -54,7 +54,7 @@ remove-binary-files:
 .PHONY: conffiles
 conffiles: $(CRONDFILES) $(DIRSFILES) $(LINKSFILES) $(INSTALLFILES) $(DOCSFILES) $(PCRONDFILES) $(PDIRSFILES) $(PLINKSFILES) $(PINSTALLFILES) $(PDOCSFILES) debian/control
 
-debian/$(OLDPACKAGE)-plugin-%.cron.d:
+debian/$(PACKAGE)-plugin-%.cron.d:
 	sed -e 's/\$$FFUSER/$(OLDPACKAGE)/g' $(CURDIR)/plugins/$*/packaging/cron.d/plugin-$* > $@
 
 debian/$(OLDPACKAGE)-%.cron.d:
