--- a/src/debian/rules
+++ b/src/debian/rules
@@ -17,6 +17,9 @@ default:
 
 include /usr/share/dpatch/dpatch.make
 
+PPOSTINST=$(patsubst plugins/%/NAME,debian/$(PACKAGE)-plugin-%.postinst,$(wildcard plugins/*/NAME))
+PPRERM=$(patsubst plugins/%/NAME,debian/$(PACKAGE)-plugin-%.prerm,$(wildcard plugins/*/NAME))
+
 CRONDFILES=$(patsubst packaging/cron.d/%,debian/$(OLDPACKAGE)-%.cron.d,$(wildcard packaging/cron.d/[a-z]*))
 PCRONDFILES=$(patsubst %,debian/$(PACKAGE)-%.cron.d,$(shell ls  plugins/*/packaging/cron.d/[a-z]* | sed 's:.*/\(.[^/]*\):\1:'))
 
@@ -36,6 +39,9 @@ PDOCSFILES=$(patsubst %,debian/$(PACKAGE)-%.docs,$(shell ls  plugins/*/packaging
 POFILES=$(patsubst debian/dsf-po/%,debian/po/%,$(wildcard debian/dsf-po/*) debian/po/POTFILES.in)
 
 testpat:
+	@echo "PPOSTINST=$(PPOSTINST)"
+	@echo "PPRERM=$(PPRERM)"
+	@echo ""
 	@echo "CRONDFILES=$(CRONDFILES)"
 	@echo "DIRSFILES=$(DIRSFILES)"
 	@echo "LINKSFILES=$(LINKSFILES)"
@@ -52,7 +58,13 @@ remove-binary-files:
 	sh $(CURDIR)/deb-specific/manage-uufiles.sh clean
 
 .PHONY: conffiles
-conffiles: $(CRONDFILES) $(DIRSFILES) $(LINKSFILES) $(INSTALLFILES) $(DOCSFILES) $(PCRONDFILES) $(PDIRSFILES) $(PLINKSFILES) $(PINSTALLFILES) $(PDOCSFILES) debian/control
+conffiles: $(PPOSTINST) $(PPRERM) $(CRONDFILES) $(DIRSFILES) $(LINKSFILES) $(INSTALLFILES) $(DOCSFILES) $(PCRONDFILES) $(PDIRSFILES) $(PLINKSFILES) $(PINSTALLFILES) $(PDOCSFILES) debian/control
+
+debian/$(PACKAGE)-plugin-%.postinst:
+	$(SED_REPLACE) -e 's/@PLUGSHORTNAME@/$*/g' -e 's/@PLUGLONGNAME@/`cat plugins/$*/NAME`/g' $(CURDIR)/debian/dsf-in/plugin.postinst > $@
+
+debian/$(PACKAGE)-plugin-%.prerm:
+	$(SED_REPLACE) -e 's/@PLUGSHORTNAME@/$*/g' -e 's/@PLUGLONGNAME@/`cat plugins/$*/NAME`/g' $(CURDIR)/debian/dsf-in/plugin.prerm > $@
 
 debian/$(PACKAGE)-plugin-%.cron.d:
 	sed -e 's/\$$FFUSER/$(OLDPACKAGE)/g' $(CURDIR)/plugins/$*/packaging/cron.d/plugin-$* > $@
